IT Data Domain Architect - Bank of Hawaii Careers. Medidata Solutions Careers - Senior Enterprise Architect. Sr.Software Engineer-Big Data, Cloud Architecture -21835 #0224 job at Radiant Digital in Temple Terrace, FL, powered by JobScore. Unusual Ventures - Senior Data Warehouse Architect.  Amplifon Careers - Global IT Data Architect. Datatonic - Jobs: Cloud Architect (GCP) - Apply online. Lead Data Architect | Kalos Consulting, Inc.. Hummingbird Technologies Ltd - Jobs: Big Data Architect - Apply .... Verifone Careers - Bigdata Architect. Diverse Lynx LLC Windows Data Center Architect Administrator | SmartRecruiters. Dataiku - Hadoop Architect EMEA. Big Data Technical Architect - Mumbai - Careers. Bmtech group Data Architect | SmartRecruiters. Datastrong Careers - Data Architect. Data Architect (SZ) - Klook - Career Page. Job Application for Data Architecture Engineer at Blue Apron. Sr Data Architect, Cloud in United States, United States | Careers at .... Nortal - Data Architect. ServiceNow Careers - Principal Database Architect. Quast Ltd - Jobs: Data Architect - Apply online. Centare - Data Architect. IT Pros Health Care Data Architect  ($130K-$160K / Immediate Health Care Benefits / 401k / 20-days PTO / Plus More) | SmartRecruiters. Data/Technical Architect-Contingent Worker-21458 #0193 job at Radiant Digital in Irving, TX, powered by JobScore. Data Architect - RELX Careers. Technical Data Architect - Experian Careers. Software Engineer Database/Data Architect (11259) | Sundial Software Career Opportunities. Techo-Bloc Business Intelligence Analyst - Data Architect, ETL | SmartRecruiters. CoreTechs Inc. Master Data Management (MDM) Architect | SmartRecruiters. Intech Recruitment. Data Architect | SmartRecruiters. Datastrong Careers - Big Data Architect. Data &amp; Analytics Architect EMEA - NIKE, Inc. Careers. Endo Pharmaceuticals Inc. Careers - Senior Data Center Operations Architect. Logitech Careers - Data Architect. Datastrong Careers - Data Architect. Spry

--- a/data-architect.html
+++ b/data-architect.html
@@ -52,7 +52,7 @@
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-07-24</p>
 <hr/>
-<h5><a href='https://jobs.lever.co/unusual/371b0b6f-2831-4d72-bacd-72c69136edc2/apply'>Unusual Ventures - Senior Data Warehouse Architect</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.lever.co/unusual/371b0b6f-2831-4d72-bacd-72c69136edc2/apply'>Unusual Ventures - Senior Data Warehouse Architect</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>Jul 17, 2019 ... Senior Data Warehouse Architect. San Francisco, California. Wonderschool. Full 
 Time. Submit your application. Resume/CV ?. ATTACH RESUME/CV. Couldn't?...</p>
@@ -61,7 +61,7 @@ Time. Submit your application. Resume/CV ?. ATTACH RESUME/CV. Couldn't?...</p>
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-07-24</p>
 <hr/>
-<h5><a href='https://datatonic.workable.com/j/A770136ECD'>Datatonic - Jobs: Cloud Architect (GCP) - Apply online</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://datatonic.workable.com/j/A770136ECD'>Datatonic - Jobs: Cloud Architect (GCP) - Apply online</a></h5> 
 <p><span class="badge badge-light">London, England, United Kingdom</span></p>
 <p>Posted on: 2019-07-23</p>
 <hr/>
@@ -74,7 +74,7 @@ Time. Submit your application. Resume/CV ?. ATTACH RESUME/CV. Couldn't?...</p>
 <p>4 days ago ... You will join a talented team of software engineers, big data engineers, computer 
 vision experts and machine learning researchers, and are expected to get up?...</p>
 <hr/>
-<h5><a href='https://jobs.jobvite.com/verifone/job/oK8aafwW'>Verifone Careers - Bigdata Architect</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.jobvite.com/verifone/job/oK8aafwW'>Verifone Careers - Bigdata Architect</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>2 days ago ... About Connect ? Payment Services ? Estate Management ? Verifone Marketplace ? 
 Developer Central. Solutions. Retail ? Hospitality ? Acquirers ? Petro. Support.</p>
@@ -105,7 +105,7 @@ effectively?...</p>
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-07-22</p>
 <hr/>
-<h5><a href='https://boards.greenhouse.io/blueapron/jobs/1784143'>Job Application for Data Architecture Engineer at Blue Apron</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://boards.greenhouse.io/blueapron/jobs/1784143'>Job Application for Data Architecture Engineer at Blue Apron</a></h5> 
 <p><span class="badge badge-light">New York, NY</span></p>
 <p>Posted on: 2019-07-21</p>
 <hr/>
@@ -123,7 +123,7 @@ applications?...</p>
 <p><span class="badge badge-light">San Diego California</span></p>
 <p>Posted on:: 2019-07-21</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://quast.workable.com/j/47C941B44F'>Quast Ltd - Jobs: Data Architect - Apply online</a></h5> 
+<h5><a href='https://quast.workable.com/j/47C941B44F'>Quast Ltd - Jobs: Data Architect - Apply online</a></h5> 
 <p><span class="badge badge-light">England, United Kingdom</span></p>
 <p>Posted on: 2019-07-20</p>
 <hr/>
@@ -132,7 +132,7 @@ applications?...</p>
 <p>3 days ago ... We are looking to add a Data Architect to our team here at Centare. In this newly 
 created role, you will be responsible for building the foundation of our?...</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.smartrecruiters.com/smartrecruiters83/743999692064340-health-care-data-architect-130k-160k-immediate-health-care-benefits-401k-20-days-pto-plus-more-'>IT Pros Health Care Data Architect  ($130K-$160K / Immediate Health Care Benefits / 401k / 20-days PTO / Plus More) | SmartRecruiters</a></h5> 
+<h5><a href='https://jobs.smartrecruiters.com/smartrecruiters83/743999692064340-health-care-data-architect-130k-160k-immediate-health-care-benefits-401k-20-days-pto-plus-more-'>IT Pros Health Care Data Architect  ($130K-$160K / Immediate Health Care Benefits / 401k / 20-days PTO / Plus More) | SmartRecruiters</a></h5> 
 <p><span class="badge badge-light">Philadelphia, PA</span></p>
 <p>Posted on: 2019-07-20</p>
 <hr/>
@@ -144,7 +144,7 @@ created role, you will be responsible for building the foundation of our?...</p>
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-07-19</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://experian.referrals.selectminds.com/jobs/technical-data-architect-11353'>Technical Data Architect - Experian Careers</a></h5> 
+<h5><a href='https://experian.referrals.selectminds.com/jobs/technical-data-architect-11353'>Technical Data Architect - Experian Careers</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>3 days ago ... The Architect will play a critical role in designing, developing and implementing 
 high performing applications using NOSQL DB and BigData...</p>
@@ -165,7 +165,7 @@ high performing applications using NOSQL DB and BigData...</p>
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-07-17</p>
 <hr/>
-<h5><a href='https://jobs.jobvite.com/datastrong/job/o2Qzafwl'>Datastrong Careers - Big Data Architect</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.jobvite.com/datastrong/job/o2Qzafwl'>Datastrong Careers - Big Data Architect</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-07-17</p>
 <hr/>
@@ -287,7 +287,7 @@ class?...</p>
 <p><span class="badge badge-light">Overland Park, KS</span></p>
 <p>Posted on: 2019-07-11</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://alley.breezy.hr/p/a85fc788646c-master-data-architect'>Master Data Architect at Alley Recruits</a></h5> 
+<h5><a href='https://alley.breezy.hr/p/a85fc788646c-master-data-architect'>Master Data Architect at Alley Recruits</a></h5> 
 <p><span class="badge badge-light">Philadelphia, PA</span></p>
 <p>Posted on: 2019-07-11</p>
 <hr/>
@@ -364,7 +364,7 @@ implementation of ETL processes throughout the design, build and maintenance
 <p>Jun 24, 2019 ... We're looking for a GCP Data Architect who can design and implement modern 
 architecture for a diverse set of customers and industries. The ideal candidate?...</p>
 <hr/>
-<h5><a href='https://jobs.lever.co/unusual/371b0b6f-2831-4d72-bacd-72c69136edc2'>Unusual Ventures - Senior Data Warehouse Architect</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.lever.co/unusual/371b0b6f-2831-4d72-bacd-72c69136edc2'>Unusual Ventures - Senior Data Warehouse Architect</a></h5> 
 <p><span class="badge badge-light">San Francisco, California</span></p>
 <p>Posted on: 2019-07-03</p>
 <hr/>
@@ -372,7 +372,7 @@ architecture for a diverse set of customers and industries. The ideal candidate?
 <p><span class="badge badge-light">Kuala Lumpur Malaysia</span></p>
 <p>Posted on: 2019-07-03</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://strongbox-data-solution.workable.com/j/5F1ADAC236'>StrongBox Data Solutions - Jobs: Sales driven Solutions Architect / Sales Engineer - Apply online</a></h5> 
+<h5><a href='https://strongbox-data-solution.workable.com/j/5F1ADAC236'>StrongBox Data Solutions - Jobs: Sales driven Solutions Architect / Sales Engineer - Apply online</a></h5> 
 <p><span class="badge badge-light">Colorado, United States</span></p>
 <p>Posted on: 2019-07-03</p>
 <hr/>
@@ -429,7 +429,7 @@ Security Engineer, Cyber Operations (TS/SCI Polygraph Clearance). Annapolis?...<
 <p><span class="badge badge-light">San Diego California</span></p>
 <p>Posted on:: 2019-06-28</p>
 <hr/>
-<h5><a href='https://jobs.crelate.com/portal/averityteam/job/h3d31emchei4baa74ngiryd3gw'>Solutions Data Architect ($200K) | Averity</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.crelate.com/portal/averityteam/job/h3d31emchei4baa74ngiryd3gw'>Solutions Data Architect ($200K) | Averity</a></h5> 
 <p><span class="badge badge-light">New York, NY</span></p>
 <p>Posted on: 2019-06-28</p>
 <hr/>
@@ -462,7 +462,7 @@ bricks-and-mortar retail world with innovative products that fuel...</p>
 <p><span class="badge badge-light">Charlotte, NC</span></p>
 <p>Posted on: 2019-06-27</p>
 <hr/>
-
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/>
 
 <!--End body here -->
 
