--- a/android-engineer.html
+++ b/android-engineer.html
@@ -74,7 +74,7 @@
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-07-23</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='http://vokal.recruiterbox.com/jobs/fk0fdvq'>
+<h5><a href='http://vokal.recruiterbox.com/jobs/fk0fdvq'>
     Android Engineer  at Vokal
 </a></h5> 
 <p><span class="badge badge-light">Chicago, Illinois, United States</span></p>
@@ -84,7 +84,7 @@
 <p><span class="badge badge-light">San Francisco, CA</span></p>
 <p>Posted on: 2019-07-22</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.lever.co/quizlet-2/e4b3bdc7-864e-452c-857a-7240222da65e'>Quizlet - Android Software Engineer, Subscriptions</a></h5> 
+<h5><a href='https://jobs.lever.co/quizlet-2/e4b3bdc7-864e-452c-857a-7240222da65e'>Quizlet - Android Software Engineer, Subscriptions</a></h5> 
 <p><span class="badge badge-light">San Francisco, CA</span></p>
 <p>Posted on: 2019-07-22</p>
 <hr/>
@@ -98,7 +98,7 @@
 <p><span class="badge badge-light">Chicago, Illinois, United States</span></p>
 <p>Posted on: 2019-07-20</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.lever.co/joyn/2cd3d167-3950-458d-8e38-af8374f55938'>Joyn GmbH - Android Software Engineer (m/f/d)</a></h5> 
+<h5><a href='https://jobs.lever.co/joyn/2cd3d167-3950-458d-8e38-af8374f55938'>Joyn GmbH - Android Software Engineer (m/f/d)</a></h5> 
 <p><span class="badge badge-light">Munich</span></p>
 <p>Posted on: 2019-07-20</p>
 <hr/>
@@ -233,7 +233,7 @@ workforces with GoSpotCheck. Our software helps teams perfect merchandising,
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-07-11</p>
 <hr/>
-<h5><a href='https://ultramobile.applicantstack.com/x/detail/a296ecjuhvow'>Senior Android Engineer - Ultra Mobile</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://ultramobile.applicantstack.com/x/detail/a296ecjuhvow'>Senior Android Engineer - Ultra Mobile</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>Jun 28, 2019 ... Because Ultra/Mint Mobile is looking for our next extraordinary Senior Android 
 Engineer to level up our Apps Team in Costa Mesa! You'll be leading?...</p>
@@ -427,7 +427,7 @@ sushi, fried chicken, hamburgers and so on from our internet service......</p>
 <p><span class="badge badge-light">Hamburg, Germany</span></p>
 <p>Posted on: 2019-06-22</p>
 <hr/>
-<h5><a href='http://atlanticmedia.applytojob.com/apply/lmT1mSpTUQ/Android-Engineer'>Android Engineer - Atlantic Media - Career Page</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='http://atlanticmedia.applytojob.com/apply/lmT1mSpTUQ/Android-Engineer'>Android Engineer - Atlantic Media - Career Page</a></h5> 
 <p><span class="badge badge-light">New York, NY</span></p>
 <p>Posted on: 2019-06-22</p>
 <hr/>
