--- a/devops.html
+++ b/devops.html
@@ -368,7 +368,7 @@ relationships through actionable data, advanced analytics and machine learning.<
 <p><span class="badge badge-light">San Jose, CA</span></p>
 <p>Posted on: 2019-07-22</p>
 <hr/>
-<h5><a href='https://jobs.crelate.com/portal/devopsdna/job/fbofinzumiz5i7r3s3uyntka1y'>Sr. Java developer (Contract) | RecruiterDNA | DevOpsDNA - Job Page</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.crelate.com/portal/devopsdna/job/fbofinzumiz5i7r3s3uyntka1y'>Sr. Java developer (Contract) | RecruiterDNA | DevOpsDNA - Job Page</a></h5> 
 <p><span class="badge badge-light">Sunnyvale, CA</span></p>
 <p>Posted on: 2019-07-22</p>
 <hr/>
