Job Application for Principal UX & Product Designer at Conductor. ChannelVAS - Jobs: UX Designer - Apply online. Concepteur UX/UI - Designer UX/UI - Optel Group - Career Page. Deposit Solutions GmbH - Jobs: UX/UI Designer - Apply online. Arthur Grand Technologies Inc Senior Web Application Developer / UI/UX Developer | SmartRecruiters. Farfetch Careers - Senior UI/UX Product Designer. Servian - UX/UI Designer. Brandwatch Careers - Product/UX Designer. UX Designer - Think Company - Career Page.       Lead UI / UX Designer (m/w/d) - Caseking GmbH     . Job Application for Engineering: Lead UI Engineer (UI/UX) at Job Board. Job Application for Engineering: Lead UI Engineer (UI/UX) at Job Board. Woongjin, Inc UX Designer (Designer / Publisher) | SmartRecruiters. iAdvize UI/UX Designer H/F | SmartRecruiters.     UX Writer at MEKARI (PT. Mid Solusi Nusantara) . Publicis Groupe UX Designer / Konzepter  (m/w/d) | SmartRecruiters. Molekule - Senior UX Product Designer. UX/UI Designer - iTech Media - Career Page. BCG Digital Ventures - Lead UX Designer - FinTech Venture Startup. BCG Digital Ventures - Senior UX Designer - FinTech Venture Startup. BCG Digital Ventures - Senior UX/UI Designer - Stealth Automotive Marketplace. Helbiz Inc. - UX/UI Designer. HomeX - Senior Content Lead (Marketing + UX). HomeX - Senior Content Lead (Marketing + UX). Dvele - UI/UX Designer.       UX Designer - DefinedCrowd     . Fiix Software - Jobs: User Experience (UX) Designer - Apply online. Fiix Software - Jobs: Director, UX Design - Apply online. Job @ Sharpist (Berlin): UI/(UX) Designer | JOIN. Job @ Medici Living Digital Services (Berlin): UX/... | JOIN. Job @ Medici Living Digital Services (Berlin): UX/... | JOIN. Job @ Global Savings Group (Munich): UX Designer (... | JOIN. Job @ endios (Hamburg): UI-/UX-Designer (m/w/d) ab... | JOIN. ShopUp UX/UI Designer | SmartRecruiters. wehkamp Digital Designer (UX/UI, Brand) | SmartRecruiters. Designer UX/UI - Optel Group - Career Page. Zones Careers

--- a/ux.html
+++ b/ux.html
@@ -99,7 +99,7 @@
 <p><span class="badge badge-light">France</span></p>
 <p>Posted on: 2019-07-24</p>
 <hr/>
-<h5><a href='https://sleekr.recruiterbox.com/jobs/fk03f7q/'>
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://sleekr.recruiterbox.com/jobs/fk03f7q/'>
     UX Writer at MEKARI (PT. Mid Solusi Nusantara)
 </a></h5> 
 <p><span class="badge badge-light"></span></p>
@@ -129,7 +129,7 @@
 <p><span class="badge badge-light">London</span></p>
 <p>Posted on: 2019-07-24</p>
 <hr/>
-<h5><a href='https://jobs.lever.co/helbiz/20618d79-f090-4726-8266-530e1f2b0233'>Helbiz Inc. - UX/UI Designer</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.lever.co/helbiz/20618d79-f090-4726-8266-530e1f2b0233'>Helbiz Inc. - UX/UI Designer</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-07-24</p>
 <hr/>
@@ -175,7 +175,7 @@
 <p><span class="badge badge-light">Munich Munich</span></p>
 <p>Posted on: 2019-04-05</p>
 <hr/>
-<h5><a href='https://endios.join.com/jobs/263747-ui-ux-designer-m-w-d-ab-sofort-vollzeit-unbefristet'>Job @ endios (Hamburg): UI-/UX-Designer (m/w/d) ab... | JOIN</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://endios.join.com/jobs/263747-ui-ux-designer-m-w-d-ab-sofort-vollzeit-unbefristet'>Job @ endios (Hamburg): UI-/UX-Designer (m/w/d) ab... | JOIN</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-04-05</p>
 <hr/>
@@ -199,7 +199,7 @@
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-07-23</p>
 <hr/>
-<h5><a href='https://skylight.workable.com/j/03758ED8E6'>Skylight - Jobs: UX Designer - Apply online</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://skylight.workable.com/j/03758ED8E6'>Skylight - Jobs: UX Designer - Apply online</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-07-23</p>
 <hr/>
@@ -221,7 +221,7 @@
 <p><span class="badge badge-light">New York, NY</span></p>
 <p>Posted on: 2019-07-23</p>
 <hr/>
-<h5><a href='https://jobs.crelate.com/portal/clearpoint/job/sfyo6tq94fsmsfaeb5deuta11e'>UX Architect | My Crelate Portal</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.crelate.com/portal/clearpoint/job/sfyo6tq94fsmsfaeb5deuta11e'>UX Architect | My Crelate Portal</a></h5> 
 <p><span class="badge badge-light">Washington, DC</span></p>
 <p>Posted on: 2019-07-23</p>
 <hr/>
@@ -320,7 +320,7 @@ or check?...</p>
 <p><span class="badge badge-light"></span></p>
 <p>Posted on:: 2019-07-21</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://kisi.recruitee.com/o/ui-ux-designer'>
+<h5><a href='https://kisi.recruitee.com/o/ui-ux-designer'>
       UI &amp; UX Designer - Kisi
     </a></h5> 
 <p><span class="badge badge-light">Stockholm, Sweden</span></p>
@@ -372,7 +372,7 @@ data?...</p>
 <p><span class="badge badge-light">Columbus, Ohio</span></p>
 <p>Posted on: 2019-07-20</p>
 <hr/>
-<h5><a href='https://join.join.com/jobs/251743-ux-designer-f-m-d'>Job @ JOIN Solutions (Berlin): UX Designer (f/m/d) | JOIN</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://join.join.com/jobs/251743-ux-designer-f-m-d'>Job @ JOIN Solutions (Berlin): UX Designer (f/m/d) | JOIN</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>1 day ago ... I agree with the JOIN Terms & Conditions and Data Privacy Policy. APPLY FOR 
 THIS JOB. Already applied? Check the status of your application. Share this job:.</p>
@@ -381,7 +381,7 @@ THIS JOB. Already applied? Check the status of your application. Share this job:
 <p><span class="badge badge-light">Noida</span></p>
 <p>Posted on: 2019-07-20</p>
 <hr/>
-<h5><a href='https://boards.greenhouse.io/glovo/jobs/4364063002'>Job Application for UX/UI Designer at Glovo</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://boards.greenhouse.io/glovo/jobs/4364063002'>Job Application for UX/UI Designer at Glovo</a></h5> 
 <p><span class="badge badge-light">Barcelona Barcelona</span></p>
 <p>Posted on: 2019-07-20</p>
 <hr/>
