Vichara Data Engineer - Python AWS Java | SmartRecruiters. Job Application for Senior Data Engineer at Grailed. Data Engineer - Rakuten Careers. Pac-12 Networks Careers - Data Engineer. Senior Data Engineer | Averity. Principal Data Engineer (HealthTech) | Averity. DataProphet Data Engineer - Customer Success | SmartRecruiters. Ancestry - Data Engineer – Enterprise Data Management / DNA Operations. Crisalix - Jobs: Data Engineer - Apply online. Denodo Technologies Data Engineer - SQL / Big Data / Cloud | SmartRecruiters. Job Application for Sr. Data Engineer - Airflow Specialization  at Curology.       Data Engineer - DefinedCrowd     . Guidewire Software, Inc. Careers - Senior Data Engineer, Cyber Risk Analytics - San Mateo, CA. Zscaler Careers - Senior Big Data Engineer. Job @ talpasolutions (Essen): Data Engineer | JOIN. Socure - Senior Data Engineer. StreetLight Data - Senior Data Engineer. PointClickCare - Data Engineers - All Seniority Levels (Toronto Office). Xfers - Data Engineer - Taiwan Taipei. Mattermost - Data Engineer (Remote). Crossmedia Data Engineer | SmartRecruiters. Aroghia Group Sr. Data Engineer for Leading Sportswear Brand (W2 Only, no C2C!) | SmartRecruiters. Aginic - Jobs: Data Engineer (Melbourne) - Apply online. Aginic - Jobs: Data Engineer (Sydney) - Apply online. Job Application for Data Engineer  at NextGen America. Job Application for Data Engineer II at OKCupid. CMDB Data Engineer - Johnson Controls Careers. Job Application for Data Engineer  at  Cazoo. Datatonic - Jobs: Data Engineer - Apply online. Datatonic - Jobs: Data Engineer - Apply online. Monese - Jobs: Data Engineer - Apply online. Keywords Studios - Jobs: Big Data Engineer - Apply online. Linux Academy - Data Engineer (Remote). Greppy Systems Azure Data Engineer | SmartRecruiters. Sr. Data Engineer ? (Maplewood, MN). Saama Technologies Inc Careers - Cloud Data Engineer. Infoblox Careers - Data Engineer. Data Engineer in Los Angeles, California | Careers at The Getty. Careers 

--- a/data-engineer.html
+++ b/data-engineer.html
@@ -44,7 +44,7 @@
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-07-25</p>
 <hr/>
-<h5><a href='https://boards.greenhouse.io/grailed/jobs/4092544002'>Job Application for Senior Data Engineer at Grailed</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://boards.greenhouse.io/grailed/jobs/4092544002'>Job Application for Senior Data Engineer at Grailed</a></h5> 
 <p><span class="badge badge-light">New York, NY</span></p>
 <p>Posted on: 2019-07-24</p>
 <hr/>
@@ -72,7 +72,7 @@
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-07-24</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://crisalix.workable.com/j/3BBA95D413'>Crisalix - Jobs: Data Engineer - Apply online</a></h5> 
+<h5><a href='https://crisalix.workable.com/j/3BBA95D413'>Crisalix - Jobs: Data Engineer - Apply online</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-07-24</p>
 <hr/>
@@ -163,7 +163,7 @@ Engineer for managing the CMDB (Configuration Management Database)?...</p>
 <p><span class="badge badge-light">London</span></p>
 <p>Posted on: 2019-07-23</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://datatonic.workable.com/j/33A776CCFC'>Datatonic - Jobs: Data Engineer - Apply online</a></h5> 
+<h5><a href='https://datatonic.workable.com/j/33A776CCFC'>Datatonic - Jobs: Data Engineer - Apply online</a></h5> 
 <p><span class="badge badge-light">Munich Munich London</span></p>
 <p>Posted on: 2019-07-23</p>
 <hr/>
@@ -307,7 +307,7 @@ The hire will be responsible for expanding and optimizing our Operations data?..
 <p><span class="badge badge-light">San Francisco, CA, USA</span></p>
 <p>Posted on: 2019-07-21</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://boards.greenhouse.io/appannie/jobs/1782960'>Job Application for Big Data Engineer Intern at App Annie</a></h5> 
+<h5><a href='https://boards.greenhouse.io/appannie/jobs/1782960'>Job Application for Big Data Engineer Intern at App Annie</a></h5> 
 <p><span class="badge badge-light">Beijing</span></p>
 <p>Posted on: 2019-07-21</p>
 <hr/>
@@ -315,7 +315,7 @@ The hire will be responsible for expanding and optimizing our Operations data?..
 <p><span class="badge badge-light">Tel Aviv</span></p>
 <p>Posted on: 2019-07-21</p>
 <hr/>
-<h5><a href='https://cbs.avature.net/cbsinteractivecareers/JobDetail/Data-Engineer/15143'>Data Engineer - CBS Interactive Careers</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://cbs.avature.net/cbsinteractivecareers/JobDetail/Data-Engineer/15143'>Data Engineer - CBS Interactive Careers</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>3 days ago ... Truly premium content. At true scale. Only CBSi. CBS Interactive is the premier 
 online content network for information and online operations of CBS Corporation
